<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hapthexa_dxl_servo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yamashitakoume@gmail.com">Koumei Yamashita</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>rclcpp_action</build_depend>
  <exec_depend>rclcpp_action</exec_depend>

  <build_depend>hapthexa_msgs</build_depend>
  <exec_depend>hapthexa_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
